--- a/styles/main.css
+++ b/styles/main.css
@@ -1,29 +1,3 @@
-/*!
-
- =========================================================
- * Now-ui-kit - v1.1.0
- =========================================================
-
- * Product Page: http://www.creative-tim.com/product/now-ui-kit
- * Copyright 2017 Creative Tim (http://www.creative-tim.com)
- * Licensed under MIT (https://github.com/creativetimofficial/now-ui-kit/blob/master/LICENSE.md)
-
- * Designed by www.invisionapp.com Coded by www.creative-tim.com
-
- =========================================================
-
- * The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
-
- */
-/*     brand Colors              */
-/*      light colors         */
-/* ========================================================================
- * bootstrap-switch - v3.3.2
- * http://www.bootstrap-switch.org
- * ========================================================================
- * Copyright 2012-2013 Mattia Larentis
- * http://www.apache.org/licenses/LICENSE-2.0
- */
 .bootstrap-switch {
   display: inline-block;
   direction: ltr;
@@ -62,6 +36,28 @@
   -webkit-transform: translate3d(0, 0, 0);
   transform: translate3d(0, 0, 0);
   width: 100px !important;
+}
+
+label.error {
+  color: red;
+  font-weight: 500;
+  position: absolute;
+  top: 37px;
+  left: 37px;
+}
+
+.success-modal .modal-header{
+  border-bottom: none;
+  padding-top: 0px !important;
+  padding-right: 24px;
+  padding-bottom: 0;
+  padding-left: 24px;
+  background: #2ca8ff;  
+  color: #fff;
+}
+
+.success-modal .modal-footer button{
+  background: #2ca8ff;
 }
 
 .bootstrap-switch .bootstrap-switch-handle-on,
@@ -4637,6 +4633,10 @@ Created using IcoMoon - icomoon.io
 .card .card-body {
   min-height: 190px;
 }
+.education-height {
+  min-height: 150px !important;
+  padding-top: 20px !important;
+}
 
 .card[data-background-color="orange"] {
   background-color: #1da1f2;
@@ -4868,7 +4868,7 @@ Created using IcoMoon - icomoon.io
 
 .profile-page .description,
 .profile-page .category {
-  text-align: center;
+  text-align: left;
 }
 
 .profile-page h5.description {
@@ -5399,6 +5399,28 @@ Created using IcoMoon - icomoon.io
   position: absolute;
   top: 68%;
   right: 12%;
+}
+
+.scroll_To_Top{
+  width: 50px;
+  height: 50px;
+  color: black;
+  text-decoration: none;
+  position:fixed;
+  padding:10px; 
+  text-align:center; 
+  background: #2ca8ff;
+  font-weight: bold;
+  border-radius: 25px;
+  top:88%;
+  right:10px;
+  line-height: 24px;
+  display:none;
+}
+  
+.scroll_To_Top:hover{
+  text-decoration:none;
+  color:green;
 }
 
 [data-background-color="orange"] {
@@ -7096,10 +7118,10 @@ Created using IcoMoon - icomoon.io
 
 .cc-profile-image a:before {
   content: "";
-  border: 15px solid rgba(55, 140, 63, 0.6);
+  border: 15px solid #7397ad;
   border-radius: 50%;
-  height: 180px;
-  width: 180px;
+  height: 230px;
+  width: 220px;
   position: absolute;
   left: 0;
   -webkit-animation: pulsate 1.6s ease-out;
@@ -7181,7 +7203,7 @@ Created using IcoMoon - icomoon.io
 }
 
 .cc-education .cc-education-header {
-  padding-top: 60px;
+  padding-top: 60px;  
   padding-right: 0;
   text-align: center;
   color: #fff;
@@ -7251,6 +7273,10 @@ Created using IcoMoon - icomoon.io
 
 .cc-twitter:hover i {
   color: #1da1f2;
+}
+
+.cc-linkedin:hover i {
+  color: #0073b1;
 }
 
 .cc-google-plus:hover i {
