--- a/styles/main.css
+++ b/styles/main.css
@@ -89,7 +89,7 @@ label.error {
 .bootstrap-switch .bootstrap-switch-handle-on.bootstrap-switch-brown,
 .bootstrap-switch .bootstrap-switch-handle-off.bootstrap-switch-brown {
   color: #fff;
-  background: #1da1f2;
+  background: #ef982c;
 }
 
 .bootstrap-switch .bootstrap-switch-handle-on.bootstrap-switch-blue,
@@ -265,7 +265,7 @@ label.error {
 }
 
 .bootstrap-switch.bootstrap-switch-on .bootstrap-switch-brown ~ .bootstrap-switch-default {
-  background-color: #1da1f2;
+  background-color: #ef982c;
 }
 
 .bootstrap-switch.bootstrap-switch-on .bootstrap-switch-blue ~ .bootstrap-switch-default {
@@ -586,7 +586,7 @@ label.error {
 }
 
 .slider.slider-primary .noUi-connect, .slider.slider-primary.noUi-connect {
-  background-color: #1da1f2;
+  background-color: #ef982c;
 }
 
 .slider.slider-primary.noUi-target {
@@ -594,7 +594,7 @@ label.error {
 }
 
 .slider.slider-primary .noUi-handle {
-  background-color: #1da1f2;
+  background-color: #ef982c;
 }
 
 .slider.slider-info .noUi-connect, .slider.slider-info.noUi-connect {
@@ -671,7 +671,7 @@ label.error {
 }
 
 .datepicker.datepicker-primary {
-  background-color: #1da1f2;
+  background-color: #ef982c;
 }
 
 .datepicker.datepicker-primary th,
@@ -681,11 +681,11 @@ label.error {
 }
 
 .datepicker.datepicker-primary:after {
-  border-bottom-color: #1da1f2;
+  border-bottom-color: #ef982c;
 }
 
 .datepicker.datepicker-primary.datepicker-orient-top:after {
-  border-top-color: #1da1f2;
+  border-top-color: #ef982c;
 }
 
 .datepicker.datepicker-primary .dow {
@@ -716,7 +716,7 @@ label.error {
 .datepicker.datepicker-primary table tr td.active.disabled div,
 .datepicker.datepicker-primary table tr td.active.disabled:hover div {
   background-color: #FFFFFF;
-  color: #1da1f2;
+  color: #ef982c;
 }
 
 .datepicker.datepicker-primary table tr td.day:hover div,
@@ -787,7 +787,7 @@ label.error {
 .datepicker.datepicker-primary table tr td span.active:hover[disabled],
 .datepicker.datepicker-primary table tr td span.active.disabled[disabled],
 .datepicker.datepicker-primary table tr td span.active.disabled:hover[disabled] {
-  color: #1da1f2;
+  color: #ef982c;
 }
 
 .datepicker-inline {
@@ -896,7 +896,7 @@ label.error {
 }
 
 .datepicker th {
-  color: #1da1f2;
+  color: #ef982c;
 }
 
 .table-condensed > tbody > tr > td,
@@ -1106,7 +1106,7 @@ label.error {
 .datepicker table tr td.active:hover div,
 .datepicker table tr td.active.disabled div,
 .datepicker table tr td.active.disabled:hover div {
-  background-color: #1da1f2;
+  background-color: #ef982c;
   color: #FFFFFF;
   -webkit-box-shadow: 0px 1px 10px 0px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 10px 0px rgba(0, 0, 0, 0.2);
@@ -1132,7 +1132,7 @@ label.error {
 .datepicker table tr td.active:hover[disabled] div,
 .datepicker table tr td.active.disabled[disabled] div,
 .datepicker table tr td.active.disabled:hover[disabled] div {
-  background-color: #1da1f2;
+  background-color: #ef982c;
 }
 
 .datepicker table tr td.active:active,
@@ -1175,7 +1175,7 @@ label.error {
 .datepicker table tr td span.active.disabled,
 .datepicker table tr td span.active.disabled:hover {
   color: #fff;
-  background-color: #1da1f2;
+  background-color: #ef982c;
 }
 
 .datepicker table tr td span.active:hover,
@@ -1198,7 +1198,7 @@ label.error {
 .datepicker table tr td span.active:hover[disabled],
 .datepicker table tr td span.active.disabled[disabled],
 .datepicker table tr td span.active.disabled:hover[disabled] {
-  background-color: #1da1f2;
+  background-color: #ef982c;
   -webkit-box-shadow: 0px 1px 10px 0px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 10px 0px rgba(0, 0, 0, 0.2);
 }
@@ -1511,7 +1511,7 @@ fieldset[disabled]
 }
 
 .btn-primary {
-  background-color: #1da1f2;
+  background-color: #ef982c;
   color: #FFFFFF;
 }
 
@@ -1519,7 +1519,7 @@ fieldset[disabled]
 .show > .btn-primary.dropdown-toggle,
 .show > .btn-primary.dropdown-toggle:focus,
 .show > .btn-primary.dropdown-toggle:hover {
-  background-color: #1da1f2;
+  background-color: #ef982c;
   color: #FFFFFF;
   -webkit-box-shadow: none;
           box-shadow: none;
@@ -1537,13 +1537,13 @@ fieldset[disabled] .btn-primary:focus,
 fieldset[disabled] .btn-primary.focus,
 fieldset[disabled] .btn-primary:active,
 fieldset[disabled] .btn-primary.active {
-  background-color: #1da1f2;
-  border-color: #1da1f2;
+  background-color: #ef982c;
+  border-color: #ef982c;
 }
 
 .btn-primary.btn-simple {
-  color: #1da1f2;
-  border-color: #1da1f2;
+  color: #ef982c;
+  border-color: #ef982c;
 }
 
 .btn-primary.btn-simple:hover, .btn-primary.btn-simple:focus, .btn-primary.btn-simple:active {
@@ -1555,7 +1555,7 @@ fieldset[disabled] .btn-primary.active {
 }
 
 .btn-primary.btn-link {
-  color: #1da1f2;
+  color: #ef982c;
 }
 
 .btn-primary.btn-link:hover, .btn-primary.btn-link:focus, .btn-primary.btn-link:active {
@@ -1792,7 +1792,7 @@ fieldset[disabled] .btn-danger.active {
 
 .btn-neutral {
   background-color: #FFFFFF;
-  color: #1da1f2;
+  color: #ef982c;
 }
 
 .btn-neutral:hover, .btn-neutral:focus, .btn-neutral:active, .btn-neutral.active, .btn-neutral:active:focus, .btn-neutral:active:hover, .btn-neutral.active:focus, .btn-neutral.active:hover,
@@ -2054,7 +2054,7 @@ fieldset[disabled]
 }
 
 .form-control:focus {
-  border: 1px solid #1da1f2;
+  border: 1px solid #ef982c;
   -webkit-box-shadow: none;
   box-shadow: none;
   outline: 0 !important;
@@ -2063,7 +2063,7 @@ fieldset[disabled]
 
 .form-control:focus + .input-group-addon,
 .form-control:focus ~ .input-group-addon {
-  border: 1px solid #1da1f2;
+  border: 1px solid #ef982c;
   border-left: none;
   background-color: transparent;
 }
@@ -2286,7 +2286,7 @@ fieldset[disabled]
 
 .input-group-focus .input-group-addon {
   background-color: #FFFFFF;
-  border-color: #1da1f2;
+  border-color: #ef982c;
 }
 
 .input-group-focus.form-group-no-border .input-group-addon {
@@ -2598,12 +2598,12 @@ textarea.form-control:focus, textarea.form-control:active {
 }
 
 .progress-container.progress-primary .progress-bar {
-  background: #1da1f2;
+  background: #ef982c;
 }
 
 .progress-container.progress-primary .progress-value,
 .progress-container.progress-primary .progress-badge {
-  color: #1da1f2;
+  color: #ef982c;
 }
 
 .progress-container.progress-info .progress {
@@ -2685,8 +2685,8 @@ textarea.form-control:focus, textarea.form-control:active {
 }
 
 .badge-primary {
-  border-color: #1da1f2;
-  color: #1da1f2;
+  border-color: #ef982c;
+  color: #ef982c;
 }
 
 .badge-info {
@@ -2780,8 +2780,8 @@ textarea.form-control:focus, textarea.form-control:active {
 }
 
 .pagination.pagination-primary .page-item.active > .page-link, .pagination.pagination-primary .page-item.active > .page-link:focus, .pagination.pagination-primary .page-item.active > .page-link:hover {
-  background-color: #1da1f2;
-  border-color: #1da1f2;
+  background-color: #ef982c;
+  border-color: #ef982c;
 }
 
 .pagination.pagination-warning .page-item.active > .page-link, .pagination.pagination-warning .page-item.active > .page-link:focus, .pagination.pagination-warning .page-item.active > .page-link:hover {
@@ -2806,7 +2806,7 @@ textarea.form-control:focus, textarea.form-control:active {
 .pagination.pagination-neutral .page-item.active > .page-link, .pagination.pagination-neutral .page-item.active > .page-link:focus, .pagination.pagination-neutral .page-item.active > .page-link:hover {
   background-color: #FFFFFF;
   border-color: #FFFFFF;
-  color: #1da1f2;
+  color: #ef982c;
 }
 
 button,
@@ -2826,11 +2826,11 @@ small {
 }
 
 a {
-  color: #1da1f2;
+  color: #ef982c;
 }
 
 a:hover, a:focus {
-  color: #1da1f2;
+  color: #ef982c;
 }
 
 h1, .h1 {
@@ -2920,7 +2920,7 @@ p {
 }
 
 .text-primary {
-  color: #1da1f2 !important;
+  color: #ef982c !important;
 }
 
 .text-info {
@@ -2958,12 +2958,12 @@ p {
 }
 
 .blockquote.blockquote-primary {
-  border-color: #1da1f2;
-  color: #1da1f2;
+  border-color: #ef982c;
+  color: #ef982c;
 }
 
 .blockquote.blockquote-primary small {
-  color: #1da1f2;
+  color: #ef982c;
 }
 
 .blockquote.blockquote-danger {
@@ -3051,7 +3051,7 @@ body {
 }
 
 .separator.separator-primary {
-  background-color: #1da1f2;
+  background-color: #ef982c;
 }
 
 .nav-pills .nav-item .nav-link {
@@ -3094,11 +3094,11 @@ body {
 
 .nav-pills.nav-pills-neutral .nav-item .nav-link.active, .nav-pills.nav-pills-neutral .nav-item .nav-link.active:focus, .nav-pills.nav-pills-neutral .nav-item .nav-link.active:hover {
   background-color: #FFFFFF;
-  color: #1da1f2;
+  color: #ef982c;
 }
 
 .nav-pills.nav-pills-primary .nav-item .nav-link.active, .nav-pills.nav-pills-primary .nav-item .nav-link.active:focus, .nav-pills.nav-pills-primary .nav-item .nav-link.active:hover {
-  background-color: #1da1f2;
+  background-color: #ef982c;
 }
 
 .nav-pills.nav-pills-info .nav-item .nav-link.active, .nav-pills.nav-pills-info .nav-item .nav-link.active:focus, .nav-pills.nav-pills-info .nav-item .nav-link.active:hover {
@@ -3211,8 +3211,8 @@ body {
 }
 
 .nav-tabs.nav-tabs-primary > .nav-item > .nav-link.active {
-  border-color: #1da1f2;
-  color: #1da1f2;
+  border-color: #ef982c;
+  color: #ef982c;
 }
 
 .nav-tabs.nav-tabs-info > .nav-item > .nav-link.active {
@@ -3398,7 +3398,7 @@ body {
 }
 
 .bg-primary {
-  background-color: #1da1f2 !important;
+  background-color: #ef982c !important;
 }
 
 .bg-info {
@@ -3736,7 +3736,7 @@ img {
 }
 
 .popover.popover-primary {
-  background-color: #1da1f2;
+  background-color: #ef982c;
 }
 
 .popover.popover-primary .popover-body {
@@ -3744,19 +3744,19 @@ img {
 }
 
 .popover.popover-primary.bs-popover-right .arrow:after {
-  border-right-color: #1da1f2;
+  border-right-color: #ef982c;
 }
 
 .popover.popover-primary.bs-popover-top .arrow:after {
-  border-top-color: #1da1f2;
+  border-top-color: #ef982c;
 }
 
 .popover.popover-primary.bs-popover-bottom .arrow:after {
-  border-bottom-color: #1da1f2;
+  border-bottom-color: #ef982c;
 }
 
 .popover.popover-primary.bs-popover-left .arrow:after {
-  border-left-color: #1da1f2;
+  border-left-color: #ef982c;
 }
 
 .popover.popover-primary .popover-header {
@@ -4499,7 +4499,7 @@ Created using IcoMoon - icomoon.io
 }
 
 .modal.modal-mini .modal-profile i {
-  color: #1da1f2;
+  color: #ef982c;
   font-size: 21px;
 }
 
@@ -4508,7 +4508,7 @@ Created using IcoMoon - icomoon.io
 }
 
 .modal.modal-mini .modal-profile.modal-profile-primary {
-  background-color: #1da1f2;
+  background-color: #ef982c;
 }
 
 .modal.modal-mini .modal-profile.modal-profile-danger {
@@ -4545,7 +4545,7 @@ Created using IcoMoon - icomoon.io
 }
 
 .modal.modal-primary .modal-content {
-  background-color: #1da1f2;
+  background-color: #ef982c;
   color: #FFFFFF;
 }
 
@@ -4639,7 +4639,7 @@ Created using IcoMoon - icomoon.io
 }
 
 .card[data-background-color="orange"] {
-  background-color: #1da1f2;
+  background-color: #ef982c;
 }
 
 .card[data-background-color="red"] {
@@ -5409,7 +5409,7 @@ Created using IcoMoon - icomoon.io
   position:fixed;
   padding:10px; 
   text-align:center; 
-  background: #2ca8ff;
+  background: #ef982c;
   font-weight: bold;
   border-radius: 25px;
   top:88%;
@@ -5634,13 +5634,13 @@ Created using IcoMoon - icomoon.io
     transition: all 0.5s cubic-bezier(0.685, 0.0473, 0.346, 1);
   }
   .sidebar-collapse .navbar-collapse:before {
-    background: #1da1f2;
+    background: #ef982c;
     /* For browsers that do not support gradients */
     /* For Safari 5.1 to 6.0 */
     /* For Opera 11.1 to 12.0 */
     /* For Firefox 3.6 to 15 */
-    background: -webkit-gradient(linear, left top, left bottom, from(#1da1f2), color-stop(80%, #000));
-    background: linear-gradient(#1da1f2 0%, #000 80%);
+    background: -webkit-gradient(linear, left top, left bottom, from(#ef982c), color-stop(80%, #000));
+    background: linear-gradient(#ef982c 0%, #000 80%);
     /* Standard syntax (must be last) */
     opacity: 0.76;
     filter: alpha(opacity=76);
@@ -6349,13 +6349,13 @@ Created using IcoMoon - icomoon.io
     transition: all 0.5s cubic-bezier(0.685, 0.0473, 0.346, 1);
   }
   .burger-menu .navbar-collapse:before {
-    background: #1da1f2;
+    background: #ef982c;
     /* For browsers that do not support gradients */
     /* For Safari 5.1 to 6.0 */
     /* For Opera 11.1 to 12.0 */
     /* For Firefox 3.6 to 15 */
-    background: -webkit-gradient(linear, left top, left bottom, from(#1da1f2), color-stop(80%, #000));
-    background: linear-gradient(#1da1f2 0%, #000 80%);
+    background: -webkit-gradient(linear, left top, left bottom, from(#ef982c), color-stop(80%, #000));
+    background: linear-gradient(#ef982c 0%, #000 80%);
     /* Standard syntax (must be last) */
     opacity: 0.76;
     filter: alpha(opacity=76);
@@ -6952,10 +6952,10 @@ Created using IcoMoon - icomoon.io
 }
 
 .gallery figure.cc-effect figcaption::before {
-  top: 10px;
-  right: 10px;
-  bottom: 10px;
-  left: 10px;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
   -webkit-transform: scale(0, 0);
   transform: scale(0, 0);
   -webkit-transform-origin: 0 0;
@@ -7228,7 +7228,7 @@ Created using IcoMoon - icomoon.io
 }
 
 .cc-reference .carousel-indicators .active {
-  background-color: #1da1f2;
+  background-color: #ef982c;
 }
 
 .cc-reference .carousel-inner {
@@ -7272,7 +7272,7 @@ Created using IcoMoon - icomoon.io
 }
 
 .cc-twitter:hover i {
-  color: #1da1f2;
+  color: #ef982c;
 }
 
 .cc-linkedin:hover i {
